adds notarial services to nav

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                     <li><a href="resources/ndbp.html" target="_blank">NDBP</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a href="resources/professional-services.html">Professional Services</a></li>
+                    <li><a href="resources/notarial-services.html">Notarial Services</a></li>
                     <li><a href="resources/all-applications.html">All Applications</a></li>
                     <li><a href="resources/government-directory.html">Government Directory</a></li>
                     <li><a href="resources/resources.html">All Resources</a></li>
