--- a/resources/notarial-services.html
+++ b/resources/notarial-services.html
@@ -78,6 +78,7 @@
                     <li><a href="ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a href="professional-services.html">Professional Services</a></li>
+                    <li><a href="#">Notarial Services</a></li>
                     <li><a href="all-applications.html">All Applications</a></li>
                     <li><a href="government-directory.html">Government Directory</a></li>
                     <li><a href="resources.html">All Resources</a></li>
@@ -146,9 +147,14 @@
         </div>
         <div class="col-md-9 content">
           <h1 class="process-title">Notarial Services</h1>
-          <p>
-            "Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-          </p>
+
+          <img src="../images/mlsc.png" class="img-responsive logo pull-right">
+
+          <h3>Micronesian Legal Services</h3>
+
+          <p>Something about Micronesian Legal Services.</p>
+
+          <p><a href="http://micronesianlegal.org" target="_blank">Click here to visit the Micronesian Legal Services website.</a></p>
         </div>
       </div>
       <!-- End main content area -->
