--- a/resources/professional-services.html
+++ b/resources/professional-services.html
@@ -78,6 +78,7 @@
                     <li><a href="ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a href="#">Professional Services</a></li>
+                    <li><a href="notarial-services.html">Notarial Services</a></li>
                     <li><a href="all-applications.html">Applications</a></li>
                     <li><a href="government-directory.html">Government Directory</a></li>
                     <li><a href="resources.html">All Resources</a></li>
