--- a/why-palau.html
+++ b/why-palau.html
@@ -78,6 +78,7 @@
                     <li><a href="resources/ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a href="resources/professional-services.html">Professional Services</a></li>
+                    <li><a href="resources/notarial-services.html">Notarial Services</a></li>
                     <li><a href="resources/all-applications.html">All Applications</a></li>
                     <li><a href="resources/government-directory.html">Government Directory</a></li>
                     <li><a href="resources/resources.html">All Resources</a></li>
@@ -108,7 +109,7 @@
           </p>
           <h2>Geography</h2>
           <ul>
-            <li>466 [508, 459] square kilometers</li>
+            <li>415.58 square kilometers</li>
             <li>More than 1,500 kilometers of coastline</li>
             <li>Largest city: Koror</li>
             <li>Highest point: Mount Ngerchelchuus (242 meters)</li>
@@ -132,7 +133,7 @@
             <li>GDP (purchasing power parity): $283.5 million (2016 estimate)</li>
             <li>GDP-per capita (PPP): $15,300 (2016 estimate)</li>
             <li>Palau uses the U.S. dollar as its currency.</li>
-            <li>90,000 [130,000] tourist arrivals annually</li>
+            <li>138,000 tourist arrivals annually</li>
             <li>Stable government and regulatory environment</li>
             <li>Low-tariff business environment</li>
             <li>No personal income tax</li>
