--- a/process/title-cultural-affairs.html
+++ b/process/title-cultural-affairs.html
@@ -78,6 +78,7 @@
                     <li><a href="../resources/ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a href="../resources/professional-services.html">Professional Services</a></li>
+                    <li><a href="../resources/notarial-services.html">Notarial Services</a></li>
                     <li><a href="../resources/all-application.html">All Applications</a></li>
                     <li><a href="../resources/government-directory.html">Government Directory</a></li>
                     <li><a href="../resources/resources.html">All Resources</a></li>
